--- a/lenteles.css
+++ b/lenteles.css
@@ -1,17 +1,17 @@
 img {
-  height: 10em;
+  height: 15em;
   width: auto;
   border-radius: 30px;
   border: 3px solid grey;
 }
 .mėlyna {
-  background-color: blue;
+  background-color: #15408c;
 }
 .ruda {
-  background-color: brown;
+  background-color: #d98068;
 }
-.žalia {
-  background-color: green;
+.raudona {
+  background-color: #f2a470;
 }
 td {
   padding: 10px;
@@ -22,4 +22,9 @@ h5 {
 table {
   margin-left: 50%;
   transform: translate(-50%);
+}
+.tiny {
+  height: 5em;
+  width: auto;
+  vertical-align: middle;
 }
