--- a/positions/style.css
+++ b/positions/style.css
@@ -13,6 +13,8 @@
   font-size: 3rem;
   background-color: rgb(87, 87, 180, 0.5);
   padding: 1rem;
+  box-shadow: 10px 10px 18px -7px rgba(0, 0, 0, 0.8);
+  border-radius: 7px;
 }
 
 .caption {
@@ -24,10 +26,18 @@
   opacity: 0.7;
   padding: 0 2rem 0.5rem;
   line-height: 1.5rem;
+  box-shadow: 10px 10px 18px -7px rgba(0, 0, 0, 0.8);
+  border-radius: 7px;
 }
 .text-wrap {
   position: absolute;
   bottom: 6rem;
   left: 5rem;
   width: 50%;
+}
+.remainder {
+  color: white;
+  background-color: black;
+  line-height: 1.7rem;
+  padding: 2rem;
 }
