--- a/positions/style.css
+++ b/positions/style.css
@@ -1,9 +1,11 @@
+/* background-position: center center; */
 .image-wrap {
   position: relative;
   height: 100vh;
   width: 100vw;
   background-image: url(../pics/brown.jpg);
   background-size: cover;
+  /* nice one: */
   background-position: center center;
 }
 
