pritaikom Inter fonta body css

--- a/figma/styles.css
+++ b/figma/styles.css
@@ -4,7 +4,8 @@
 
 body {
   background: #e2e1e1;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: "Inter", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .card {
