--- a/figma/penkta.css
+++ b/figma/penkta.css
@@ -27,6 +27,8 @@ body {
       rgba(175, 186, 203, 0) 110.33%
     ),
     #fff;
+  position: sticky;
+  top: 0;
 }
 .container p {
   padding: 1rem 14rem 0 9rem;
