--- a/figma/dream.css
+++ b/figma/dream.css
@@ -7,6 +7,20 @@ body {
   font-family: "Caveat", cursive;
   background-color: #9eb2d5;
 }
+
+.card {
+  background-color: #9eb2d5;
+  height: 97vh;
+}
+
+.text-box {
+  display: inline-block;
+  width: 49%;
+  padding: 5rem;
+  background-color: inherit;
+  z-index: 10;
+}
+
 .hello {
   font-size: 13rem;
   color: #fdfdfd;
@@ -16,57 +30,58 @@ body {
   font-size: 2.5rem;
   margin: 1rem 0;
   font-weight: 400;
+  z-index: 100;
 }
 .text {
   font-family: "Poppins", sans-serif;
 }
 
-.card {
-  margin-left: 10rem;
-  border: 1px solid black;
-  position: relative;
-  background-color: #9eb2d5;
-  height: auto;
-  z-index: 1;
-}
-.text-box {
-  border: 2px solid black;
-  margin-top: calc(50% - 10rem);
-  width: 50%;
-  height: 20rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: inherit;
-  z-index: 2;
-}
-
 .img-box {
-  border: 5px solid black;
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 50%;
-  height: 60rem;
-  background-color: inherit;
-  z-index: 12;
+  position: relative;
+  display: inline-block;
+  width: 49%;
+  height: 100%;
+  background-color: #9eb2d5;
 }
 
-.img-box img {
-  border: 2px dashed brown;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
 .pic-rectangle {
-  width: 757px;
-  height: 1426px;
+  position: absolute;
+  right: 1rem;
+  bottom: 0;
+  height: 90%;
+  object-fit: cover;
 }
 .pic-planet {
-  width: 1331.531px;
-  height: 1614.493px;
+  position: absolute;
+  transform: rotate(38deg);
+  right: -1rem;
+  bottom: -19rem;
+  height: 70%;
+  object-fit: cover;
 }
 .pic-man {
-  width: 582px;
-  height: 869px;
+  position: absolute;
+  right: 0.5rem;
+  bottom: 4rem;
+  height: 70%;
+  object-fit: cover;
+}
+
+/* o kur dar vaikiną dėti? */
+
+@media (max-width: 1000px) {
+  .text-box {
+    display: block;
+    width: 100%;
+    margin: 10rem 3vw 2rem 3vw;
+  }
+  .img-box {
+    display: block;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    transform: rotate(45deg);
+    translate: -100px -100vh;
+    opacity: 40%;
+  }
 }
