--- a/figma/dream.css
+++ b/figma/dream.css
@@ -66,6 +66,9 @@ body {
   height: 70%;
   object-fit: cover;
 }
+.oba {
+  display: none;
+}
 
 /* o kur dar vaikiną dėti? */
 
@@ -83,5 +86,13 @@ body {
     transform: rotate(45deg);
     translate: -100px -100vh;
     opacity: 40%;
+  }
+  .oba {
+    display: block;
+    font-size: 3rem;
+    color: white;
+    text-align: end;
+    margin-right: 10rem;
+    margin-top: 2rem;
   }
 }
