--- a/style.css
+++ b/style.css
@@ -1,45 +1,64 @@
-a {
-  margin-right: 2em;
-  font-size: larger;
-  font-weight: 900;
-  color: brown;
+* {
+  box-sizing: border-box;
+}
+body {
+  font-size: 25px;
+  font-family: "Courier New", Courier, monospace;
 }
 
-/* kaip padaryti kad margin-right uždėtų, bet tik ne lentelėje */
-
-td a {
-  color: blue;
+main {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: calc(100vw - 20rem);
+  overflow-y: scroll;
+  padding: 1rem;
+  line-height: 2rem;
 }
 
-ul a {
-  display: block;
-}
-
-td,
-th {
-  text-align: center;
-}
-
-img {
-  margin-left: 50%;
-  transform: translate(-50%);
-  height: 200px;
-  padding: 50px 0 50px 0;
-}
-
-table {
-  margin-left: 50%;
-  transform: translate(-50%);
+#contents-box {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 20rem;
+  border: 1px solid #ddd;
+  overflow-y: scroll;
+  padding: 1rem 0.5rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 h1 {
-  text-align: center;
+  font-size: 3rem;
+  margin-bottom: 3rem;
 }
-
-.centruotas {
-  text-align: center;
+h2 {
+  font-size: 2rem;
+  margin: 2rem;
 }
-
-p {
-  margin-left: 1em;
+/* just to have li numbering */
+ol {
+  counter-reset: item;
+}
+ol li:before {
+  content: counter(item) ". ";
+  counter-increment: item;
+}
+ol ol {
+  margin-left: 0.5rem;
+}
+ol ol li:before {
+  content: counters(item, ".") " ";
+  counter-increment: item;
+}
+li {
+  margin-left: 0.5rem;
+}
+.screenshots {
+  width: 48%;
+  height: auto;
+  object-fit: cover;
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
