--- a/projects/figma/3cards/styles.css
+++ b/projects/figma/3cards/styles.css
@@ -45,15 +45,15 @@ body {
   position: relative;
 }
 .pic-1 {
-  background-image: url("./pics/Image.png");
+  background-image: url("../pics/Image.png");
   background-size: cover;
 }
 .pic-2 {
-  background-image: url("./pics/Image\(1\).png");
+  background-image: url("../pics/Image\(1\).png");
   background-size: cover;
 }
 .pic-3 {
-  background-image: url("./pics/Image\(2\).png");
+  background-image: url("../pics/Image\(2\).png");
   background-size: cover;
 }
 
