[flex-art] : +new task, [global] upd. links

--- a/projects/flex/gelato/myStyles.css
+++ b/projects/flex/gelato/myStyles.css
@@ -1,5 +1,10 @@
+body {
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+}
+
 .bg {
-  background-image: url(../pics/gelato-bg.png);
+  background-image: url(../../pics/gelato-bg.png);
   background-repeat: repeat;
   z-index: 1;
 }
