--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ main {
 }
 
 #contents-box {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -44,6 +44,7 @@ main {
 }
 .widen {
   width: 100vw;
+  font-size: 1.5rem;
 }
 
 .hide-btn {
@@ -199,5 +200,5 @@ naujos eilutės centre*/
   box-shadow: var(--shadows);
 }
 .insert code {
-  font-size: 0.7rem;
+  font-size: 0.7em;
 }
