--- a/style.css
+++ b/style.css
@@ -68,6 +68,10 @@ h2 {
 h2::before {
   content: "✦ ";
 }
+#link-to-tasks {
+  font-size: 1.5rem;
+  background-color: rgb(165, 108, 42);
+}
 /* just to have li numbering */
 ol {
   counter-reset: item;
