--- a/projects/flex/Festival Site Design/styles.css
+++ b/projects/flex/Festival Site Design/styles.css
@@ -22,7 +22,14 @@ nav {
 }
 .banner {
   /* color: white; */
-  background-image: url(./assets/pics/festival-header-pic.jpeg);
+  /* background-image: url(./assets/pics/festival-header-pic.jpeg); */
+  background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.4) 0%,
+      rgba(0, 0, 0, 0.4) 100%
+    ),
+    url("./assets/pics/festival-header-pic.jpeg"),
+    lightgray 50% / cover no-repeat;
   background-position: center;
   background-size: cover;
   width: 100%;
@@ -31,17 +38,121 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  column-gap: 2.7rem;
+  gap: 2.7rem;
 }
 .title-text {
-  text-align: center;
   color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1.3rem;
+  align-items: center;
+  /* margin-bottom: 2.7rem; */
+  text-align: center;
 }
 .title-text h1 {
   font-family: "Lato", sans-serif;
   font-weight: 700;
   font-size: 2.5rem;
 }
-/* .btns-header-container{
 
-} */
+.btns-header-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+}
+.btn {
+  padding: 1rem 3rem;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+  color: white;
+  background-color: #eb5757;
+  border: #eb5757;
+}
+
+.view-btn {
+  color: #eb5757;
+  background-color: white;
+}
+
+/* header finished */
+
+.slogan {
+  background: #eb5757;
+  padding: 3.1rem 0.4rem;
+  color: white;
+  line-height: 1.25rem;
+  text-align: center;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+}
+
+/* artists */
+
+section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  color: rgba(34, 34, 34, 0.5);
+  text-align: center;
+  line-height: 1.25rem;
+  padding-bottom: 5.25rem;
+}
+section h2 {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  letter-spacing: 2px;
+  margin: 3.6rem auto 1rem auto;
+  color: black;
+}
+.line {
+  width: 2rem;
+  height: 0.3rem;
+  background-color: #eb5757;
+}
+.p-under {
+  margin: 2rem auto;
+}
+.artist img {
+  width: 12.5rem;
+  height: 12.5rem;
+  border: 2px solid #fff;
+  border-radius: 12.5rem;
+  object-fit: cover;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-top: 3rem;
+}
+.artist {
+  width: 12.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.artist h3 {
+  margin-top: 2rem;
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-size: 1.25rem;
+  letter-spacing: 2px;
+  color: black;
+}
+.artist p {
+  margin-top: 0.5rem;
+  font-family: "Open Sans", sans-serif;
+}
+/* galery */
+.imgs {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.6rem;
+  align-items: stretch;
+  justify-content: center;
+}
+
+.imgs img {
+  width: 45%;
+}
