--- a/projects/flex/Festival Site Design/styles.css
+++ b/projects/flex/Festival Site Design/styles.css
@@ -99,7 +99,8 @@ section {
   line-height: 1.25rem;
   padding-bottom: 5.25rem;
 }
-section h2 {
+
+.section-intro h2 {
   font-family: "Lato", sans-serif;
   font-weight: 700;
   font-size: 2rem;
@@ -107,7 +108,9 @@ section h2 {
   margin: 3.6rem auto 1rem auto;
   color: black;
 }
+
 .line {
+  margin: 0 auto;
   width: 2rem;
   height: 0.3rem;
   background-color: #eb5757;
@@ -115,6 +118,17 @@ section h2 {
 .p-under {
   margin: 2rem auto;
 }
+.section-main-part {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  gap: 3rem;
+}
+.section-main-part * {
+  flex-basis: 12.5;
+}
+
 .artist img {
   width: 12.5rem;
   height: 12.5rem;
@@ -123,7 +137,7 @@ section h2 {
   object-fit: cover;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  margin-top: 3rem;
+  /* margin-top: 3rem; */
 }
 .artist {
   width: 12.5rem;
@@ -131,6 +145,7 @@ section h2 {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  margin-top: 3rem;
 }
 .artist h3 {
   margin-top: 2rem;
@@ -154,5 +169,37 @@ section h2 {
 }
 
 .imgs img {
-  width: 45%;
+  width: 182px;
+  height: 158px;
+  object-fit: cover;
+}
+.a-ticket-box {
+  padding: 2rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+  box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.05);
+}
+.a-ticket-box > *:not(.wide-line) {
+  flex-basis: 18rem;
+}
+.a-ticket-box h3 {
+  color: #222;
+  text-align: center;
+  font-family: "Lato", sans-serif;
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 700;
+}
+.wide-line {
+  width: 100%;
+  height: 1px;
+  background: rgba(34, 34, 34, 0.05);
+}
+.price-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 2rem;
 }
