--- a/projects/flex/Festival Site Design/styles.css
+++ b/projects/flex/Festival Site Design/styles.css
@@ -174,6 +174,7 @@ section {
   object-fit: cover;
 }
 .a-ticket-box {
+  flex-basis: 22rem;
   padding: 2rem 0;
   display: flex;
   flex-wrap: wrap;
