--- a/projects/flex/Festival Site Design/styles.css
+++ b/projects/flex/Festival Site Design/styles.css
@@ -16,6 +16,15 @@ nav {
 .text-red {
   color: #eb5757;
 }
+.bg-soc {
+  background-color: #eb5757;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #sandwich-menu {
   background-color: white;
   border: 0px;
@@ -125,9 +134,9 @@ section {
   align-content: center;
   gap: 3rem;
 }
-.section-main-part * {
-  flex-basis: 12.5;
-}
+/* .section-main-part * {
+  flex-basis: 12.5rem;
+} */
 
 .artist img {
   width: 12.5rem;
@@ -138,9 +147,10 @@ section {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   /* margin-top: 3rem; */
+  /* flex-basis: 12.5rem; */
 }
 .artist {
-  width: 12.5rem;
+  width: 12rem;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -164,7 +174,6 @@ section {
   display: flex;
   flex-wrap: wrap;
   gap: 1.6rem;
-  align-items: stretch;
   justify-content: center;
 }
 
@@ -172,6 +181,8 @@ section {
   width: 182px;
   height: 158px;
   object-fit: cover;
+  flex-basis: 12.5rem;
+  flex-shrink: 2;
 }
 .a-ticket-box {
   flex-basis: 22rem;
@@ -202,5 +213,82 @@ section {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
   gap: 2rem;
+}
+.btn-ticket {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+  color: white;
+  background-color: #eb5757;
+  border: #eb5757;
+  width: 12.75rem;
+  height: 2.6rem;
+}
+.price {
+  font-family: "Lato", sans-serif;
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 700;
+  color: #222;
+  letter-spacing: 2px;
+}
+.eur {
+  padding-left: 1rem;
+}
+.map {
+  width: 343px;
+  height: 443px;
+  margin: 1rem;
+  background-image: url("./assets/pics/map.png");
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.map svg {
+  margin-top: -5rem;
+}
+
+.contact-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.8rem;
+  width: 21.5rem;
+}
+.contact-card h4 {
+  margin-top: 2rem;
+  font-family: "Lato", sans-serif;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 700;
+  color: #222;
+}
+
+.contact-category {
+  color: rgba(34, 34, 34, 0.5);
+  font-family: Open Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 146%; /* 23.36px */
+  padding-left: 0.75rem;
+}
+.contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 1.5rem;
+}
+.a-contact {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+  padding: 0 0.6rem;
+}
+.soc-bar {
+  display: flex;
+  gap: 1.25rem;
 }
