--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ main {
   padding: 1rem 0.5rem;
   line-height: 2rem;
   border: 1px solid transparent;
+  background-color: #d2b47c;
 }
 .hide {
   visibility: collapse;
