--- a/projects/grid/kalendorius/index.css
+++ b/projects/grid/kalendorius/index.css
@@ -76,11 +76,15 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-end;
   padding: 1rem;
 }
-
+.calendar span {
+  font-size: 0.7rem;
+  color: #555;
+  white-space: pre-line;
+}
 .old-month {
   color: #888;
 }
