[festival]:refactor using SCSS

--- a/projects/flex/Festival Site Design/styles.css
+++ b/projects/flex/Festival Site Design/styles.css
@@ -1,17 +1,18 @@
 html {
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
-  --lato: "Lato", sans-serif;
 }
+
 .text-red {
   color: #eb5757;
 }
+
 /* header */
 nav {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
   display: flex;
   justify-content: space-between;
-  font-family: var(--lato);
-  font-weight: 700;
   font-size: 1.4rem;
   padding: 1rem;
 }
@@ -20,24 +21,20 @@ nav {
   background-color: white;
   border: 0px;
 }
+
 .banner {
   width: 100%;
   height: 38rem;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   gap: 2.7rem;
-  background: linear-gradient(
-      0deg,
-      rgba(0, 0, 0, 0.4) 0%,
-      rgba(0, 0, 0, 0.4) 100%
-    ),
-    url("./assets/pics/festival-header-pic.jpeg"),
-    lightgray 50% / cover no-repeat;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%), url("./assets/pics/festival-header-pic.jpeg"), lightgray 50%/cover no-repeat;
   background-position: center;
   background-size: cover;
 }
+
 .title-text {
   display: flex;
   flex-direction: column;
@@ -48,7 +45,7 @@ nav {
   text-align: center;
 }
 .title-text h1 {
-  font-family: var(--lato);
+  font-family: "Lato", sans-serif;
   font-weight: 700;
   font-size: 2.5rem;
 }
@@ -58,6 +55,7 @@ nav {
   flex-direction: column;
   gap: 1.3rem;
 }
+
 .btn {
   padding: 1rem 3rem;
   font-family: "Open Sans", sans-serif;
@@ -73,7 +71,6 @@ nav {
 }
 
 /* header finished */
-
 .slogan {
   background: #eb5757;
   color: white;
@@ -95,44 +92,33 @@ section {
   color: rgba(34, 34, 34, 0.5);
   padding-bottom: 5.25rem;
 }
-
-.section-intro h2 {
-  font-family: var(--lato);
+section .section-intro h2 {
+  font-family: "Lato", sans-serif;
   font-weight: 700;
   font-size: 2rem;
   letter-spacing: 2px;
   margin: 3.6rem auto 1rem auto;
   color: black;
 }
-
-.line {
+section .section-intro .line {
   width: 2rem;
   height: 0.3rem;
   margin: 0 auto;
   background-color: #eb5757;
 }
-.p-under {
+section .section-intro .p-under {
   margin: 2rem auto;
 }
-.section-main-part {
+section .section-main-part {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  align-content: center;
+  align-items: center;
+  flex-wrap: wrap;
   gap: 3rem;
 }
-/* general section styles finished */
 
+/* general section styles finished */
 /* artists */
-.artist img {
-  width: 12.5rem;
-  height: 12.5rem;
-  border: 2px solid #fff;
-  border-radius: 12.5rem;
-  object-fit: cover;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
 .artist {
   width: 12.5rem;
   display: flex;
@@ -141,8 +127,18 @@ section {
   align-items: center;
   margin-top: 3rem;
 }
+.artist img {
+  width: 12.5rem;
+  height: 12.5rem;
+  border: 2px solid #fff;
+  border-radius: 12.5rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
 .artist h3 {
-  font-family: var(--lato);
+  font-family: "Lato", sans-serif;
   font-weight: 700;
   font-size: 1.25rem;
   letter-spacing: 2px;
@@ -153,6 +149,7 @@ section {
   font-family: "Open Sans", sans-serif;
   margin-top: 0.5rem;
 }
+
 /* galery */
 .imgs {
   display: flex;
@@ -160,11 +157,11 @@ section {
   justify-content: center;
   gap: 1.6rem;
 }
-
 .imgs img {
   width: 182px;
   height: 158px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   flex-basis: 12.5rem;
 }
 
@@ -182,25 +179,25 @@ section {
   flex-basis: 18rem;
 }
 .a-ticket-box h3 {
-  font-family: var(--lato);
-  font-size: 1.3rem;
+  font-family: "Lato", sans-serif;
   font-weight: 700;
+  font-size: 1.3rem;
   text-align: center;
   color: #222;
 }
-.wide-line {
+.a-ticket-box .wide-line {
   width: 100%;
   height: 1px;
   background: rgba(34, 34, 34, 0.05);
 }
-.price-box {
+.a-ticket-box .price-box {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
 }
-.btn-ticket {
+.a-ticket-box .btn-ticket {
   width: 12.75rem;
   height: 2.6rem;
   font-family: "Open Sans", sans-serif;
@@ -209,14 +206,14 @@ section {
   background-color: #eb5757;
   border: #eb5757;
 }
-.price {
-  font-family: var(--lato);
-  font-size: 1.3rem;
+.a-ticket-box .price {
+  font-family: "Lato", sans-serif;
   font-weight: 700;
+  font-size: 1.3rem;
   letter-spacing: 2px;
   color: #222;
 }
-.eur {
+.a-ticket-box .eur {
   padding-left: 1rem;
 }
 
@@ -235,46 +232,56 @@ section {
 .map svg {
   margin-top: -5rem;
 }
-/* contacts */
-.contact-card {
+
+/* contacts  and form*/
+.cont-and-form-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 3rem;
+  padding: 2rem 0;
+  /* contact form */
+}
+.cont-and-form-box .contact-card {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 1.8rem;
   width: 21.5rem;
 }
-.contact-card h4 {
-  font-family: var(--lato);
-  font-size: 1.5rem;
+.cont-and-form-box .contact-card h4 {
+  font-family: "Lato", sans-serif;
   font-weight: 700;
+  font-size: 1.5rem;
   margin-top: 2rem;
   color: #222;
 }
-
-.contact-category {
+.cont-and-form-box .contact-card .contacts {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 1.5rem;
+}
+.cont-and-form-box .contact-card .contacts .a-contact {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+  padding: 0 0.6rem;
+}
+.cont-and-form-box .contact-card .contacts .a-contact .contact-category {
   font-family: Open Sans;
   font-weight: 700;
   line-height: 1.5rem;
   padding-left: 1rem;
   color: rgba(34, 34, 34, 0.5);
 }
-.contacts {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  gap: 1.5rem;
-}
-.a-contact {
-  display: flex;
-  align-items: center;
-  gap: 0.3rem;
-  padding: 0 0.6rem;
-}
-.soc-bar {
+.cont-and-form-box .soc-bar {
   display: flex;
   gap: 1.25rem;
 }
-.bg-soc {
+.cont-and-form-box .soc-bar .bg-soc {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -283,8 +290,7 @@ section {
   border-radius: 100%;
   background-color: #eb5757;
 }
-/* contact form */
-.form {
+.cont-and-form-box .form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -292,79 +298,72 @@ section {
   width: 21.5rem;
   background: rgba(34, 34, 34, 0.02);
 }
-.form label {
-  display: block;
-  font-family: var(--lato);
+.cont-and-form-box .form label {
+  font-family: "Lato", sans-serif;
   font-weight: 700;
+  display: block;
   font-size: 0.9rem;
   text-align: left;
   padding: 0.6rem 0;
   color: #eb5757;
 }
-.form input {
+.cont-and-form-box .form input {
   width: calc(100% - 2rem);
   padding: 1rem;
   margin: 1rem;
 }
-
-.form > div {
+.cont-and-form-box .form > div {
   width: 100%;
 }
-.form button {
+.cont-and-form-box .form button {
   width: 12.75rem;
   height: 2.6rem;
   margin-left: 1rem;
 }
-#text-area {
+.cont-and-form-box .form #text-area {
   width: calc(100% - 2rem);
   margin: 1rem;
-}
-
-.cont-and-form-box {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 3rem;
-  align-items: center;
-  padding: 2rem 0;
 }
 
 /* bottom of page */
 footer {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   gap: 3rem;
   padding: 2.5rem;
 }
-.footer-links {
+footer .footer-links {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2.5rem;
 }
-.footer-links a {
+footer .footer-links a {
   text-decoration: none;
   color: #222;
 }
+
 /* these items shown on bigger screens */
 .tablet-shown {
   display: none;
 }
+
 .pc-shown {
   display: none;
 }
+
 .nav-links {
   display: none;
 }
+
 /* styles for tablet */
 @media screen and (min-width: 750px) {
   .tablet-shown {
     display: flex;
   }
-  .footer-links {
+  footer .footer-links {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -386,17 +385,17 @@ footer {
   #sandwich-menu {
     display: none;
   }
-  .nav-links {
+  nav {
+    justify-content: space-around;
+  }
+  nav .nav-links {
     display: flex;
     gap: 2rem;
   }
-  .nav-links a {
+  nav .nav-links a {
     font-size: 0.875rem;
     text-decoration: none;
     color: #222;
-  }
-  nav {
-    justify-content: space-around;
   }
   .map {
     width: 1170px;
@@ -408,4 +407,4 @@ footer {
     flex-direction: row-reverse;
     justify-content: space-around;
   }
-}
+}/*# sourceMappingURL=styles.css.map */
