--- a/style.css
+++ b/style.css
@@ -1,45 +1,17 @@
-html * {
-  box-sizing: border-box;
-  --shadows: 4px 3px 5px 1px rgba(0, 0, 0, 0.24);
-  --contents-width: 20rem;
-}
 html {
   font-size: 20px;
   line-height: 1.6rem;
+}
+html * {
+  box-sizing: border-box;
+  --shadows: 4px 3px 5px 1px rgba(0, 0, 0, 0.24);
+  --contents-width: 15rem;
 }
 body {
   font-family: "Roboto", sans-serif;
   background-color: #d2b48c;
 }
-
-main {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  width: calc(100vw - var(--contents-width));
-  overflow-y: scroll;
-  padding: 1rem;
-  line-height: 2rem;
-  /* background-color: #ff8800;
-  color: white; */
-  border: 1px solid transparent;
-}
-
-#contents-box {
-  font-size: 0.9rem;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: var(--contents-width);
-  border: 1px solid #ddd;
-  overflow-y: scroll;
-  padding: 1rem 0.5rem;
-  line-height: 2rem;
-  border: 1px solid transparent;
-  background-color: #d2b47c;
-}
+/* utilities */
 .hide {
   visibility: collapse;
 }
@@ -47,13 +19,106 @@ main {
   width: 100vw;
   font-size: 1.5rem;
 }
+.r {
+  text-align: right;
+}
+.tiny {
+  font-size: 0.7rem;
+}
+/* tekstas 
+naujos eilutės centre*/
+.center {
+  display: block;
+  text-align: center;
+  padding: 1rem;
+  margin: 1rem;
+}
+.big {
+  font-size: 2rem;
+  font-weight: 600;
+}
+.img-center {
+  display: block;
+  margin: 1em auto;
+  box-shadow: var(--shadows);
+}
+.l2 {
+  margin-left: 2rem;
+}
+.highlight {
+  background-color: rgb(234, 238, 28);
+}
 
-.hide-btn {
-  position: fixed;
-  top: 0;
-  left: 0;
-  opacity: 30%;
-  margin: 0.2rem 0.2rem;
+/* general */
+.code-snippet {
+  padding: 1em;
+  font-family: "Fira Code", monospace;
+  background-color: #ddd;
+  color: black;
+  overflow-wrap: break-word;
+  overflow-x: scroll;
+}
+.tag {
+  color: rgb(79, 79, 204);
+}
+.insert-container {
+  position: relative;
+}
+.insert {
+  position: absolute;
+  right: 0;
+  top: 5rem;
+  width: 40%;
+  max-height: 80%;
+  border: 2px dashed #efefef;
+  overflow-y: scroll;
+  padding: 1rem;
+  box-shadow: var(--shadows);
+}
+.insert code {
+  font-size: 0.7em;
+}
+code {
+  display: block;
+  /* text-align: center; */
+  overflow-wrap: break-word;
+  padding: 1rem;
+  margin: 1rem;
+  font-family: "Fira Code", monospace;
+  /* font-family: "Courier New", Courier, monospace; */
+  background-color: #ccc;
+  color: #333;
+}
+.pamokslas:before {
+  content: "pamokslo pradžia";
+  position: relative;
+  left: -2em;
+  background-color: rgb(211, 127, 58);
+  transform: rotate(-2deg);
+  box-shadow: var(--shadows);
+  font-size: 0.7em;
+  padding: 0.3rem;
+}
+.screenshots {
+  width: calc(30% - 1.5rem);
+  height: auto;
+  object-fit: cover;
+  margin: 1rem;
+  box-shadow: var(--shadows);
+}
+section {
+  box-shadow: var(--shadows);
+  padding: 5rem 2rem 5rem 2rem;
+  margin: 2rem 0;
+  max-width: 40em;
+  margin: 0 auto;
+}
+a {
+  text-decoration: none;
+}
+p {
+  text-indent: 2em;
+  padding: 0 2em 1em 2em;
 }
 h1 {
   font-size: 3rem;
@@ -68,11 +133,6 @@ h2 {
 }
 h2::before {
   content: "✦ ";
-}
-/* links to tasks */
-#link-to-tasks {
-  font-size: 1.5rem;
-  background-color: rgb(165, 108, 42);
 }
 /* just to have li numbering */
 ol {
@@ -96,74 +156,20 @@ li {
 li::before {
   content: "✧ ";
 }
-.screenshots {
-  width: calc(30% - 1.5rem);
-  height: auto;
-  object-fit: cover;
-  margin: 1rem;
-  box-shadow: var(--shadows);
-}
-.figma-tasks {
-  text-align: center;
-}
-section {
-  box-shadow: var(--shadows);
-  padding: 5rem 2rem 5rem 2rem;
-  margin: 2rem 0;
-  max-width: 40em;
-  margin: 0 auto;
-}
-a {
-  text-decoration: none;
-}
-p {
-  text-indent: 2em;
-  padding: 0 2em 1em 2em;
-}
-.highlight {
-  background-color: rgb(234, 238, 28);
-}
-code {
-  display: block;
-  /* text-align: center; */
-  overflow-wrap: break-word;
+
+/* concrete */
+main {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: calc(100vw - var(--contents-width));
+  overflow-y: scroll;
   padding: 1rem;
-  margin: 1rem;
-  font-family: "Fira Code", monospace;
-  /* font-family: "Courier New", Courier, monospace; */
-  background-color: #ccc;
-  color: #333;
-}
-/* jeigu reikia teksto 
-naujos eilutės centre*/
-.center {
-  display: block;
-  text-align: center;
-  padding: 1rem;
-  margin: 1rem;
-}
-.big {
-  font-size: 2rem;
-  font-weight: 600;
-}
-.img-center {
-  display: block;
-  margin: 1em auto;
-  box-shadow: var(--shadows);
-}
-.l2 {
-  margin-left: 2rem;
-}
-.code-snippet {
-  padding: 1em;
-  font-family: "Fira Code", monospace;
-  background-color: #ddd;
-  color: black;
-  overflow-wrap: break-word;
-  overflow-x: scroll;
-}
-.tag {
-  color: rgb(79, 79, 204);
+  line-height: 2rem;
+  /* background-color: #ff8800;
+  color: white; */
+  border: 1px solid transparent;
 }
 .epi {
   padding: 2rem;
@@ -174,37 +180,35 @@ naujos eilutės centre*/
   transform: rotate(-1deg);
   box-shadow: var(--shadows);
 }
-.r {
-  text-align: right;
-}
-.tiny {
-  font-size: 0.7rem;
-}
-.pamokslas:before {
-  content: "pamokslo pradžia";
-  position: relative;
-  left: -2em;
-  background-color: rgb(211, 127, 58);
-  transform: rotate(-2deg);
-  box-shadow: var(--shadows);
-  font-size: 0.7em;
-  padding: 0.3rem;
-}
-.insert-container {
-  position: relative;
+#contents-box {
+  font-size: 0.9rem;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: var(--contents-width);
+  border: 1px solid #ddd;
+  overflow-y: scroll;
+  padding: 1rem 0.5rem;
+  line-height: 2rem;
+  border: 1px solid transparent;
+  background-color: #d2b47c;
 }
 
-.insert {
-  position: absolute;
-  right: 0;
-  top: 5rem;
-  width: 40%;
-  max-height: 80%;
-  border: 2px dashed #efefef;
-  overflow-y: scroll;
-  padding: 1rem;
-  box-shadow: var(--shadows);
+.hide-btn {
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 30%;
+  margin: 0.2rem 0.2rem;
 }
-.insert code {
-  font-size: 0.7em;
+
+/* links to tasks */
+#link-to-tasks {
+  font-size: 1.5rem;
+  background-color: rgb(165, 108, 42);
+}
+
+.figma-tasks {
+  text-align: center;
 }
