--- a/projects/bootstrap/nica-reklama/css/styles.css
+++ b/projects/bootstrap/nica-reklama/css/styles.css
@@ -1,3 +1,167 @@
-iconify-icon {
-  color: #49c0fc;
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  color: #404445;
+}
+body header {
+  height: calc(100vh - 4rem);
+  background: linear-gradient(rgba(98, 100, 113, 0.5), rgba(98, 100, 113, 0.5)), url("../pics/header-380.jpeg");
+  background-size: cover;
+  background-position: center;
+}
+body header p {
+  line-height: 1.7rem;
+}
+body section h3 {
+  margin-bottom: 1.5rem;
+  font-size: 34px;
+  font-weight: 700;
+}
+body h2 {
+  font-size: 22px;
+  font-weight: 500;
+  margin-top: 1rem;
+}
+body .a-stat iconify-icon {
+  display: block;
+}
+body .a-stat span {
+  display: block;
+  font-size: 25px;
+  font-weight: 500;
+  padding-top: 0.8rem;
+}
+body .a-stat p {
+  font-size: 18px;
+  font-weight: 500;
+}
+body .a-project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+body .a-project h3 {
+  font-size: 22px;
+  font-weight: 700;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+}
+body .a-project p {
+  font-size: 18px;
+}
+body .persona h3 {
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+body .persona h4 {
+  font-size: 16px;
+  font-weight: 400;
+}
+body footer p {
+  color: #7a7c88;
+}
+body footer h2 {
+  margin-bottom: 2rem;
+}
+body footer .line-200 {
+  width: 200px;
+  height: 1px;
+  background: #707070;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+body footer .tels span {
+  display: block;
+}
+body a {
+  text-decoration: none;
+  color: white;
+}
+
+.bg-dark-grey {
+  background-color: #2f323b;
+}
+
+.bg-darker {
+  background-color: #2a2d36;
+}
+
+.bg-light-grey {
+  background-color: #eeeeee;
+}
+
+.bg-dark-bluish {
+  background-color: #5f6b81;
+}
+
+.btn-success-custom {
+  background-color: #43c45f;
+  color: white;
+  text-transform: uppercase;
+  padding: 1rem 3rem;
+}
+
+.btn-success-custom:hover,
+.btn-success-custom:focus,
+.btn-success-custom:active {
+  background-color: #43b45f;
+  color: white;
+}
+
+.text-greyish {
+  color: #7a7c88;
+}
+
+.text-intro-grey {
+  color: #d5d7d8;
+}
+
+.ff-condensed {
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.fs-18 {
+  font-size: 18px;
+}
+
+.fs-22 {
+  font-size: 22px;
+}
+
+.fs-26 {
+  font-size: 26px;
+}
+
+.fs-34 {
+  font-size: 34px;
+}
+
+.fs-40 {
+  font-size: 40px;
+}
+
+.fs-54 {
+  font-size: 54px;
+}
+
+.fs-70 {
+  font-size: 70px;
+}
+
+.fw-400 {
+  font-weight: 400;
+}
+
+.fw-500 {
+  font-weight: 500;
+}
+
+.fw-700 {
+  font-weight: 700;
+}
+
+.fw-900 {
+  font-weight: 900;
 }/*# sourceMappingURL=styles.css.map */
