--- a/projects/bootstrap/nica-reklama/css/styles.css
+++ b/projects/bootstrap/nica-reklama/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 body header {
   height: calc(100vh - 4rem);
-  background: linear-gradient(rgba(98, 100, 113, 0.5), rgba(98, 100, 113, 0.5)), url("../pics/header-380.jpeg");
+  background: linear-gradient(rgba(98, 100, 113, 0.5), rgba(98, 100, 113, 0.5)), url("../pics/header-768.jpeg");
   background-size: cover;
   background-position: center;
 }
@@ -17,6 +17,22 @@ body section h3 {
   margin-bottom: 1.5rem;
   font-size: 34px;
   font-weight: 700;
+}
+body section .centravimo {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+body section .centravimo svg {
+  align-self: center;
+  justify-self: center;
+  grid-area: 2/2/3/3;
+  z-index: 2;
+}
+body section .centravimo img {
+  justify-self: center;
+  align-self: center;
+  grid-area: 1/1/4/4;
 }
 body h2 {
   font-size: 22px;
@@ -67,8 +83,8 @@ body footer h2 {
 }
 body footer .line-200 {
   width: 200px;
-  height: 1px;
-  background: #707070;
+  height: 2px;
+  border-top: 1px solid #707070;
   margin-bottom: 1rem;
   margin-top: 1rem;
 }
@@ -80,23 +96,9 @@ body a {
   color: white;
 }
 
-.centravimo {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-}
-.centravimo svg {
-  align-self: center;
-  justify-self: center;
-  grid-area: 2/2/3/3;
-  z-index: 2;
-}
-.centravimo img {
-  justify-self: center;
-  align-self: center;
-  grid-area: 1/1/4/4;
-}
-
+/***********************************
+          UTILITIES
+************************************/
 .bg-dark-grey {
   background-color: #2f323b;
 }
